# ac

./: .gitignore  ARCHITECTURE.md  CLAUDE.md  HARDWARE.md  KANBAN.md  LICENSE  README.md  REFACTOR_NOTES.md  TESTING.md  config.example.jsonc  ff400.sh  handoff-ac-scene.md  handoff-ac-view.md  handoff-parity-completion.md  handoff-snapshot-backend.md  handoff-transfer-frame-v2.md  issues.md  pyproject.toml  qa-signoff-m1.5.md  qa-signoff-m1.md  qa-signoff-m2.md  qa-signoff-m3.md  qa-signoff.md  rust-ui-design.md  rust-ui-phase2.md  setup.py  torc.md  unified.md  update_kanban.py  update_kanban.sh
.agents/: AGENTS.md  architect.md  audit.md  developer.md  qa.md  triage.md  ux.md
ac/: __main__.py  analysis.py  calibration.py  config.py  conversions.py  test.py
ac-rs/: CLAUDE.md  Cargo.toml  PLAN.md  PROFILING.md  SNAPSHOT.md  ZMQ.md  install.sh
ac-rs/.cargo/: config.toml
ac-rs/crates/ac-cli/: Cargo.toml
ac-rs/crates/ac-cli/src/: client.rs  io.rs  main.rs  parse.rs  spawn.rs
ac-rs/crates/ac-cli/src/commands/: calibrate.rs  devices.rs  dmm.rs  generate.rs  gpio.rs  mod.rs  monitor.rs  monitor_tui.rs  plot.rs  probe.rs  report.rs  server.rs  session.rs  setup.rs  stop.rs  sweep.rs  test.rs  transfer.rs
ac-rs/crates/ac-cli/src/parse/: calibrate.rs  generate.rs  mod.rs  monitor.rs  plot.rs  server.rs  setup.rs  sweep.rs  test.rs
ac-rs/crates/ac-core/: Cargo.toml
ac-rs/crates/ac-core/examples/: bench_analyze.rs  bench_cqt.rs  bench_cwt.rs  bench_filterbank.rs  bench_fractional_octave.rs  bench_loudness.rs  bench_mic_curve_filter.rs  bench_reassigned.rs  bench_spectrum.rs  bench_sweep.rs  bench_transfer.rs
ac-rs/crates/ac-core/src/: aggregate.rs  analysis.rs  calibration.rs  config.rs  conversions.rs  cwt.rs  fractional_octave.rs  lib.rs  transfer.rs  tuner.rs  types.rs
ac-rs/crates/ac-core/src/measurement/: ccir468.rs  filterbank.rs  loudness.rs  mod.rs  noise.rs  report.rs  report_html.rs  report_pdf.rs  sweep.rs  thd.rs  weighting.rs
ac-rs/crates/ac-core/src/shared/: calibration.rs  constants.rs  conversions.rs  fft_cache.rs  generator.rs  mic_curve_filter.rs  mod.rs  reference_levels.rs  time.rs  types.rs
ac-rs/crates/ac-core/src/snapshot/: flac.rs  mod.rs
ac-rs/crates/ac-core/src/visualize/: aggregate.rs  cqt.rs  cwt.rs  fractional_octave.rs  mod.rs  pair_derivation.rs  reassigned.rs  spectrum.rs  spl_level.rs  time_integration.rs  transfer.rs  weighting_curves.rs
ac-rs/crates/ac-daemon/: Cargo.toml
ac-rs/crates/ac-daemon/src/: gpio.rs  handlers.rs  main.rs  server.rs  workers.rs
ac-rs/crates/ac-daemon/src/audio/: cpal_backend.rs  fake.rs  jack_backend.rs  mod.rs
ac-rs/crates/ac-daemon/src/handlers/: admin.rs  audio.rs  calibrate.rs  mic.rs  mod.rs  snapshot.rs  test_dut.rs  test_hw.rs  test_software.rs  transfer.rs
ac-rs/crates/ac-daemon/src/handlers/audio/: generate.rs  mod.rs  monitor.rs  plot.rs  sweep.rs
ac-rs/crates/ac-daemon/tests/: it_cross_tier_parity.rs  it_loopback_ir.rs  it_protocol.rs  it_scene_fixture.rs  it_snapshot.rs
ac-rs/crates/ac-scene/: Cargo.toml
ac-rs/crates/ac-scene/src/: dbfs.rs  lib.rs  readout.rs  scene.rs  ticks.rs  wire.rs
ac-rs/crates/ac-scene/tests/: it_fixtures.rs  it_live_frame.rs  regenerate_fixture.rs
ac-rs/crates/ac-ui/: Cargo.toml  build.rs
ac-rs/crates/ac-ui/src/: app.rs  headless.rs  main.rs  theme.rs
ac-rs/crates/ac-ui/src/app/: control.rs  helpers.rs  input.rs  render_pipeline.rs
ac-rs/crates/ac-ui/src/data/: control.rs  mod.rs  persist.rs  receiver.rs  smoothing.rs  store.rs  synthetic.rs  types.rs
ac-rs/crates/ac-ui/src/render/: aggregate.rs  context.rs  ember.rs  grid.rs  mod.rs  spectrum.rs  sweep.rs  timing.rs  transfer.rs  virtual_overlay.rs  waterfall.rs
ac-rs/crates/ac-ui/src/render/shaders/: ember_decay.wgsl  ember_deposit.wgsl  ember_display.wgsl  spectrum.wgsl  waterfall.wgsl
ac-rs/crates/ac-ui/src/ui/: export.rs  fmt.rs  keytips.rs  layout.rs  mod.rs  overlay.rs  paint_tests.rs  stats.rs
ac-rs/crates/ac-ui/tests/: it_display_truth.rs  it_views_smoke.rs
ac-rs/crates/ac-view/: Cargo.toml
ac-rs/crates/ac-view/src/: app.rs  computes_nothing.rs  geometry.rs  keys.rs  lib.rs  main.rs  range.rs  session.rs  snapshot_flow.rs  view.rs  zmq_client.rs
ac-rs/crates/ac-view/tests/: it_geometry.rs  it_live_end_to_end.rs  it_remote.rs  it_snapshot_end_to_end.rs  it_trace_distinction.rs  support.rs
ac/client/: CLAUDE.md  ac.py  io.py  parse.py  plotting.py
ac/server/: CLAUDE.md  audio.py  engine.py  jack_calibration.py  jack_measure.py  sd_audio.py  transfer.py
ac/ui/: CLAUDE.md  app.py  spectrum.py  sweep.py  thd.py  transfer.py
docs/: loudness-bs1770-5.md
ds/: README.md  config.py
scripts/: create_issues.sh  profile-samply.sh  profile-ui-attach.sh  profile-ui-samply.sh  rc-smoke.sh
tests/: conftest.py  requirements.txt  test_analysis.py  test_calibration.py  test_conversions.py  test_parse.py  test_server_client.py  test_transfer.py
tests/fixtures/: snapshot-fixture-v1.acsnap  transfer-frame-v2-live.json  transfer-frame-v2.json
tests/fixtures/fixtures-spectrum-hf-garbage/: README.md  spectrum_20260704T133115Z.csv  spectrum_20260704T133120Z.csv  spectrum_20260704T133127Z.csv  spectrum_20260704T133131Z.csv  spectrum_20260704T133141Z.csv
thd_tool/: __main__.py  ac.py  analysis.py  audio.py  calibration.py  cli.py  config.py  constants.py  conversions.py  dmm.py  io.py  jack_calibration.py  jack_measure.py  live.py  parse.py  plotting.py  server.py  set_output.py  signal.py  sweep.py
thd_tool/client/: CLAUDE.md  ac.py  io.py  parse.py  plotting.py  tui.py
thd_tool/gpio/: gpio.py
thd_tool/server/: CLAUDE.md  analysis.py  audio.py  dmm.py  jack_calibration.py  jack_measure.py  sd_audio.py  server.py  signal.py
thd_tool/thd_tool.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt
thd_tool/ui/: CLAUDE.md  app.py  spectrum.py  sweep.py
