[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "ac-tools"
version = "0.3.0a1"
description = "CLI toolkit for audio bench measurements — THD, THD+N, sweeps, transfer functions"
readme = "README.md"
license = "MIT"
requires-python = ">=3.9"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Science/Research",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3",
    "Topic :: Multimedia :: Sound/Audio :: Analysis",
]
dependencies = [
    "sounddevice",
    "numpy",
    "scipy",
    "matplotlib",
    "pyzmq",
    "pyserial",
]

[project.optional-dependencies]
dev = ["pytest"]
gui = ["pyqtgraph>=0.13"]
jack = ["jack-client"]

[project.scripts]
ac = "ac.client.ac:main"
thd = "ac.cli:main"
ds = "ds.cli:main"

[tool.setuptools]
packages = { find = {} }
