[package]
name    = "ac-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ac"
path = "src/main.rs"

[dependencies]
ac-core    = { path = "../ac-core" }
zmq        = "0.10"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
crossterm  = "0.28"
csv        = "1"
chrono     = { version = "0.4", features = ["clock"] }
