[package]
name = "ac-core"
version = "0.1.0"
edition = "2021"
description = "Core audio measurement library — FFT, THD/THD+N, calibration, signal generation"

[dependencies]
realfft    = "3"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
rand       = "0.8"
rand_distr = "0.4"

[dev-dependencies]
approx   = "0.5"
tempfile = "3"
