[package]
name = "ac-core"
version = "0.2.0"
edition = "2021"
description = "Core audio measurement library — FFT, THD/THD+N, calibration, signal generation"

[dependencies]
realfft    = "3"
rustfft    = "6"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow     = "1"
rand       = "0.8"
rand_distr = "0.4"
rayon      = "1"
printpdf   = "0.7"

[dev-dependencies]
approx   = "0.5"
tempfile = "3"
proptest = "1"
