[package]
name        = "ac-daemon"
version     = "0.2.0"
edition     = "2021"
description = "ZMQ audio measurement server — JACK/CPAL audio I/O, FFT analysis, worker management"

[[bin]]
name = "ac-daemon"
path = "src/main.rs"

[dependencies]
ac-core     = { path = "../ac-core" }
zmq         = "0.10"
serde       = { version = "1", features = ["derive"] }
serde_json  = "1"
anyhow      = "1"
crossbeam-channel = "0.5"
ringbuf     = "0.4"
arc-swap    = "1.7"
jack        = { version = "0.11", optional = true }
cpal        = { version = "0.15", optional = true }
serialport = "4.9.0"
rayon       = "1"
chrono      = { version = "0.4", default-features = false, features = ["clock"] }

[features]
default    = ["jack-audio", "cpal-audio"]
jack-audio = ["dep:jack"]
cpal-audio = ["dep:cpal"]
