[package]
name        = "ac-ui"
version     = "0.1.0"
edition     = "2021"
build       = "build.rs"
description = "GPU audio measurement UI — wgpu spectrum/waterfall/CWT, egui transfer/sweep views"

[[bin]]
name = "ac-ui"
path = "src/main.rs"

[dependencies]
ac-core           = { path = "../ac-core" }
anyhow            = "1"
wgpu              = "24"
winit             = { version = "0.30", features = ["rwh_06"] }
egui              = "0.31"
egui-wgpu         = "0.31"
egui-winit        = { version = "0.31", default-features = false, features = ["wayland", "x11"] }
pollster          = "0.4"
env_logger        = "0.11"
log               = "0.4"

serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
zmq               = "0.10"
triple_buffer     = "8"
bytemuck          = { version = "1", features = ["derive"] }

image             = { version = "0.25", default-features = false, features = ["png"] }
chrono            = { version = "0.4", default-features = false, features = ["clock"] }
